--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3",
-    "primeicons": "4.1.0",
-    "primevue": "2.3.0"
+    "nuxt": "^2.15.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
